test/spec_vectors/local_get/fail/module_15.wat
(module (func $unbound-mixed (param i32) (local i32 i64) (local.get 3) drop))